# az-nv-ingest

./: AGENTS.md  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
api/: AGENTS.md  pyproject.toml
client/: AGENTS.md
config/: AGENTS.md  README.md  otel-collector-config.yaml
docker/: AGENTS.md
docs/: azure-aks-quickstart.md  azure-compat-matrix.md
helm/: AGENTS.md  README.md  README.md.gotmpl  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  secretproviderclass-azure-keyvault.yaml  secrets.yaml  serviceaccount.yaml
infra/: AGENTS.md  README.md  main.bicep
infra/modules/: acr.bicep  acrRoleAssignment.bicep  aks.bicep  (+7 more)
nim/: AGENTS.md
nim/nvidia/nemoretriever-table-structure-v1/: Dockerfile  README.md  pyproject.toml
nim/nvidia/nemoretriever-table-structure-v1/src/nemoretriever_table_structure_v1/: __init__.py  errors.py  inference.py  metrics.py
nim/nvidia/nemoretriever-table-structure-v1/src/nemoretriever_table_structure_v1/clients/: triton_client.py
nim/nvidia/nemoretriever-table-structure-v1/tests/: test_contract.py
nim/nvidia/nemoretriever-table-structure-v1/tests/stubs/tritonclient/: grpc.py
nim/nvidia/nemoretriever-table-structure-v1/triton/model_repository/yolox_ensemble/: config.pbtxt
oim/baidu/paddleocr/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
oim/baidu/paddleocr/src/oim_paddleocr/: __init__.py  auth.py  inference.py  metrics.py  server.py  settings.py
oim/baidu/paddleocr/src/paddleocr/: auth.py
oim/baidu/paddleocr/tests/: test_contract_paddleocr.py
oim/baidu/paddleocr/tests/stubs/: paddleocr.py
oim/baidu/paddleocr/tests/stubs/tritonclient/: __init__.py  http.py  utils.py
oim/baidu/paddleocr/triton/model_repository/paddleocr/: config.pbtxt
oim/baidu/paddleocr/triton/model_repository/paddleocr/1/: model.py
oim/common/: entrypoint.sh  pyproject.toml
oim/common/src/common/: __init__.py  logging.py
oim/common/src/oim_common/: __init__.py  audio.py  auth.py  errors.py  fastapi.py  images.py  metrics.py  rate_limit.py  settings.py  telemetry.py  triton.py
oim/common/tests/: test_contract_common.py
oim/nvidia/llama-3.2-nv-embedqa-1b-v2/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
oim/nvidia/llama-3.2-nv-embedqa-1b-v2/src/llama_3_2_nv_embedqa_1b_v2/: __init__.py  auth.py  rate_limit.py  server.py
oim/nvidia/llama-3.2-nv-embedqa-1b-v2/src/oim_llama_3_2_nv_embedqa_1b_v2/: __init__.py  auth.py  inference.py  models.py  server.py  settings.py
oim/nvidia/llama-3.2-nv-embedqa-1b-v2/tests/: test_contract_embedqa.py
oim/nvidia/nemoretriever-graphic-elements-v1/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
oim/nvidia/nemoretriever-graphic-elements-v1/src/nemoretriever_graphic_elements_v1/: settings.py
oim/nvidia/nemoretriever-graphic-elements-v1/src/oim_nemoretriever_graphic_elements_v1/: auth.py  errors.py  inference.py  server.py  settings.py
oim/nvidia/nemoretriever-graphic-elements-v1/src/oim_nemoretriever_graphic_elements_v1/clients/: triton_client.py
oim/nvidia/nemoretriever-graphic-elements-v1/tests/: test_contract_graphic_elements.py
oim/nvidia/nemoretriever-graphic-elements-v1/triton/model_repository/yolox_ensemble/1/: model.py
oim/nvidia/nemoretriever-ocr-v1/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
oim/nvidia/nemoretriever-ocr-v1/src/oim_nemoretriever_ocr_v1/: auth.py  errors.py  inference.py  models.py  server.py  settings.py
oim/nvidia/nemoretriever-ocr-v1/tests/: test_contract_ocr.py
oim/nvidia/nemoretriever-ocr-v1/tests/stubs/tritonclient/: __init__.py  grpc.py
oim/nvidia/nemoretriever-ocr-v1/triton/model_repository/scene_text_wrapper/: config.pbtxt
oim/nvidia/nemoretriever-ocr-v1/triton/model_repository/scene_text_wrapper/1/: model.py
oim/nvidia/nemoretriever-page-elements-v3/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
oim/nvidia/nemoretriever-page-elements-v3/src/nemoretriever_page_elements_v3/: __init__.py  app.py  auth.py  inference.py  metrics.py  server.py  settings.py
oim/nvidia/nemoretriever-page-elements-v3/src/oim_nemoretriever_page_elements_v3/: auth.py  errors.py  inference.py  models.py  server.py  settings.py
oim/nvidia/nemoretriever-page-elements-v3/src/oim_nemoretriever_page_elements_v3/clients/: triton_client.py
oim/nvidia/nemoretriever-page-elements-v3/tests/: test_contract_page_elements.py
oim/nvidia/nemoretriever-page-elements-v3/tests/stubs/tritonclient/: __init__.py
oim/nvidia/nemoretriever-page-elements-v3/triton/model_repository/pipeline/: config.pbtxt
oim/nvidia/nemotron-nano-12b-v2-vl/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
oim/nvidia/nemotron-nano-12b-v2-vl/src/nemotron_nano_12b_v2_vl/: __init__.py  auth.py  inference.py  metrics.py  models.py  server.py  settings.py  telemetry.py
oim/nvidia/nemotron-nano-12b-v2-vl/src/oim_nemotron_nano_12b_v2_vl/: __init__.py  auth.py  inference.py  server.py  settings.py
oim/nvidia/nemotron-nano-12b-v2-vl/src/oim_nemotron_nano_12b_v2_vl/clients/: triton_client.py
oim/nvidia/nemotron-nano-12b-v2-vl/tests/: test_contract.py  test_contract_vlm.py
oim/nvidia/nemotron-nano-12b-v2-vl/tests/stubs/tritonclient/: utils.py
oim/nvidia/nemotron-nano-12b-v2-vl/triton/model_repository/nemotron_nano_12b_v2_vl/1/: model.py
oim/nvidia/parakeet-1-1b-ctc-en-us/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
oim/nvidia/parakeet-1-1b-ctc-en-us/src/oim_parakeet_1_1b_ctc_en_us/: __init__.py  auth.py  grpc_server.py  inference.py  server.py  settings.py
oim/nvidia/parakeet-1-1b-ctc-en-us/src/parakeet_1_1b_ctc_en_us/: __init__.py  auth.py  http_api.py  metrics.py  server.py  settings.py
oim/nvidia/parakeet-1-1b-ctc-en-us/tests/: test_contract.py  test_contract_parakeet.py
oim/nvidia/parakeet-1-1b-ctc-en-us/triton/model_repository/parakeet_1_1b_ctc_en_us/: config.pbtxt
services/open-shims/: Dockerfile  README.md  pyproject.toml
services/open-shims/src/open_shims/: __init__.py  app.py  constants.py  main.py
services/open-shims/tests/: test_contracts.py
src/: AGENTS.md  microservice_entrypoint.py  pyproject.toml
(+146 files in other folders)
